--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
       <a href="/auth/google">Login with Google</a>
     </form>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
