--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <br>
       <button type="submit">Login</button>
       <a href="/auth/google">Login with Google</a>
+      <a href="/auth/facebook">Login with facebook</a>
     </form>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
