index file renamed

--- a/create_trip.html
+++ b/create_trip.html
@@ -35,7 +35,7 @@
             // Perform logout logic here
             // For example, clear session data and redirect to the login page
             sessionStorage.clear();
-            window.location.href = 'index.html';
+            window.location.href = 'index_.html';
         });
     </script>
 </body>
