--- a/budget_management.html
+++ b/budget_management.html
@@ -52,7 +52,7 @@
             // Perform logout logic here
             // For example, clear session data and redirect to the login page
             sessionStorage.clear();
-            window.location.href = 'index.html';
+            window.location.href = 'index_.html';
         });
     </script>
 </body>
